--- a/app/src/main/res/drawable-v24/ic_details_black_24dp.xml
+++ b/app/src/main/res/drawable-v24/ic_details_black_24dp.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <item>
         <shape
             android:shape="ring"
             android:thicknessRatio="16"
-            android:useLevel="false"
-            android:tint="@color/teal_700">
+            android:useLevel="false">
+            <gradient
+                android:startColor="@color/purple_200"
+                android:endColor="@color/teal_200"
+                android:angle="0" />
         </shape>
     </item>
     <item>
@@ -21,5 +23,4 @@
         </shape>
     </rotate>
     </item>
-
 </layer-list>
