--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/purple_800"
     android:orientation="vertical">
 
     <TextView
@@ -12,9 +13,10 @@
         android:layout_margin="10dp"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Progress Timer"
-        android:textColor="@color/purple_500"
-        android:textSize="20sp" />
+        android:text="@string/progress_timer"
+        android:textColor="@color/teal_200"
+        android:visibility="gone"
+        android:textSize="40sp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -22,30 +24,33 @@
 
         <ProgressBar
             android:id="@+id/progress_circular"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="280dp"
+            android:layout_height="280dp"
             android:layout_gravity="center"
             android:indeterminateOnly="false"
             android:max="100"
-            android:progress="0"
+            android:progress="100"
             android:progressDrawable="@drawable/ic_details_black_24dp" />
 
         <TextView
             android:id="@+id/progress_value"
-            android:layout_width="100dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_centerInParent="true"
             android:gravity="center"
             android:padding="10dp"
-            android:text="PROGRESS"
-            android:textColor="@color/purple_200" />
+            android:textSize="20sp"
+            android:text="@string/progress"
+            android:textColor="@color/teal_200" />
     </RelativeLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/SHOW_PROGRESS"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
-        android:text="CLICK HEAR TO PROGRESS 10%" />
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/click_hear_to_progress_10"
+        android:background="@drawable/button_shape"/>
 </LinearLayout>
